@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-12-20T16:11:05Z",
+  "timestamp" : "2023-12-21T08:12:41Z",
   "count_outdated" : 1514,
   "uniques_outdated" : 826,
-  "count" : 1532,
-  "uniques" : 836,
+  "count" : 1533,
+  "uniques" : 837,
   "clones" : [
     {
       "timestamp": "2023-12-11T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
