@@ -1,6 +1,6 @@
 {
-  "count": 18,
-  "uniques": 1,
+  "count": 19,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2023-12-11T00:00:00Z",
@@ -50,6 +50,11 @@
     {
       "timestamp": "2023-12-20T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-21T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
