@@ -1,3 +1,12 @@
+2023-12-21T08:12:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7285595307 # 2193
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-21
+* notice: last 14d: unq all: 2 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 826 1514 / 836 1532
+* notice: next accum: outdated-unq outdated-all / unq all: 826 1514 / 837 1533
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-12-21]
+
 2023-12-20T16:11:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7277950435 # 2191
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-20
